--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/user_admin?useUnicode=true&characterEncoding=UTF-8&logger=com.mysql.jdbc.log.StandardLogger
-jdbc.username = root
-jdbc.password = your_password
+jdbc.props = reconnect=true&useUnicode=true&characterEncoding=UTF-8&logger=com.mysql.jdbc.log.StandardLogger
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
 hibernate.show_sql = false
 hibernate.format_sql = false
